log/build_2025-03-19_09-00-53/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishtemp.py", line 15
    def main()
              ^
SyntaxError: expected ':'

